Update azure-pipelines.yml for Azure Pipelines

--- a/ShardDatabase/azure-pipelines.yml
+++ b/ShardDatabase/azure-pipelines.yml
@@ -24,5 +24,4 @@ jobs:
 - job: databaseEnvironments
   steps:
   - ${{ each database in parameters.databaseEnvironments }}:
-    - ${{ each shard in database.shards }}:
-      - script: echo "Processing environmet:" ${{ database.name }} " Shard name:" ${{ shard }}
+    - script: echo "Processing environmet:" ${{ database.name }}
